// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Select correctly 1`] = `
<Component
  className=""
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "button": "#3fbaca",
        "common": "#ffffff",
        "disabledButton": "#e2e2e2",
        "main": "#f7f7f7",
        "secondaryToggle": "#ffffff",
        "toggle": "#425579",
      },
      "borderColors": Object {
        "common": "#e2e2e2",
      },
      "fontColors": Object {
        "anchor": "#3fbaca",
        "button": "#ffffff",
        "common": "#293346",
        "description": "#9d9d9d",
        "disabledAnchor": "#9d9d9d",
        "label": "#2d2d2d",
        "secondaryToggle": "#9d9d9d",
        "text": "#9d9d9d",
        "toggle": "#ffffff",
      },
    }
  }
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<Component
  className=""
  dataLabel="select"
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "button": "#3fbaca",
        "common": "#ffffff",
        "disabledButton": "#e2e2e2",
        "main": "#f7f7f7",
        "secondaryToggle": "#ffffff",
        "toggle": "#425579",
      },
      "borderColors": Object {
        "common": "#e2e2e2",
      },
      "fontColors": Object {
        "anchor": "#3fbaca",
        "button": "#ffffff",
        "common": "#293346",
        "description": "#9d9d9d",
        "disabledAnchor": "#9d9d9d",
        "label": "#2d2d2d",
        "secondaryToggle": "#9d9d9d",
        "text": "#9d9d9d",
        "toggle": "#ffffff",
      },
    }
  }
  selectedValue={
    Array [
      "2",
      "4",
    ]
  }
  showList={true}
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;
